COMMERCE-2408 new endpoints for attaching files to Product, plus removed Attachmetns endpoints