@@ -17,6 +17,8 @@ package com.liferay.headless.commerce.admin.catalog.internal.util.v1_0;
 import com.liferay.commerce.product.model.CPAttachmentFileEntry;
 import com.liferay.commerce.product.service.CPAttachmentFileEntryService;
 import com.liferay.headless.commerce.admin.catalog.dto.v1_0.Attachment;
+import com.liferay.headless.commerce.admin.catalog.dto.v1_0.AttachmentBase64;
+import com.liferay.headless.commerce.admin.catalog.dto.v1_0.AttachmentUrl;
 import com.liferay.headless.commerce.admin.catalog.internal.util.DateConfigUtil;
 import com.liferay.headless.commerce.core.util.DateConfig;
 import com.liferay.headless.commerce.core.util.LanguageUtils;
@@ -36,7 +38,8 @@ import com.liferay.upload.UniqueFileNameProvider;
 
 import java.io.File;
 
-import java.net.URI;
+import java.net.URL;
+import java.net.URLConnection;
 
 import java.util.Calendar;
 import java.util.Locale;
@@ -63,9 +66,54 @@ public class AttachmentUtil {
 		}
 
 		if (Validator.isNotNull(attachment.getSrc())) {
-			URI uri = new URI(attachment.getSrc());
+			URL url = new URL(attachment.getSrc());
 
-			File file = new File(uri);
+			URLConnection urlConnection = url.openConnection();
+
+			urlConnection.connect();
+
+			File file = FileUtil.createTempFile(urlConnection.getInputStream());
+
+			return _addFileEntry(
+				groupId, userId, file, MimeTypesUtil.getContentType(file),
+				uniqueFileNameProvider);
+		}
+
+		return null;
+	}
+
+	public static FileEntry addFileEntry(
+			AttachmentBase64 attachmentBase64, long groupId, long userId,
+			UniqueFileNameProvider uniqueFileNameProvider)
+		throws Exception {
+
+		if (Validator.isNotNull(attachmentBase64.getAttachment())) {
+			byte[] attachmentBytes = Base64.decode(
+				attachmentBase64.getAttachment());
+
+			File file = FileUtil.createTempFile(attachmentBytes);
+
+			return _addFileEntry(
+				groupId, userId, file, MimeTypesUtil.getContentType(file),
+				uniqueFileNameProvider);
+		}
+
+		return null;
+	}
+
+	public static FileEntry addFileEntry(
+			AttachmentUrl attachmentUrl, long groupId, long userId,
+			UniqueFileNameProvider uniqueFileNameProvider)
+		throws Exception {
+
+		if (Validator.isNotNull(attachmentUrl.getSrc())) {
+			URL url = new URL(attachmentUrl.getSrc());
+
+			URLConnection urlConnection = url.openConnection();
+
+			urlConnection.connect();
+
+			File file = FileUtil.createTempFile(urlConnection.getInputStream());
 
 			return _addFileEntry(
 				groupId, userId, file, MimeTypesUtil.getContentType(file),
@@ -77,6 +125,38 @@ public class AttachmentUtil {
 
 	public static Map<Locale, String> getTitleMap(
 			CPAttachmentFileEntry cpAttachmentFileEntry, Attachment attachment)
+		throws PortalException {
+
+		if (attachment.getTitle() != null) {
+			return LanguageUtils.getLocalizedMap(attachment.getTitle());
+		}
+
+		if (cpAttachmentFileEntry == null) {
+			return null;
+		}
+
+		return cpAttachmentFileEntry.getTitleMap();
+	}
+
+	public static Map<Locale, String> getTitleMap(
+			CPAttachmentFileEntry cpAttachmentFileEntry,
+			AttachmentBase64 attachment)
+		throws PortalException {
+
+		if (attachment.getTitle() != null) {
+			return LanguageUtils.getLocalizedMap(attachment.getTitle());
+		}
+
+		if (cpAttachmentFileEntry == null) {
+			return null;
+		}
+
+		return cpAttachmentFileEntry.getTitleMap();
+	}
+
+	public static Map<Locale, String> getTitleMap(
+			CPAttachmentFileEntry cpAttachmentFileEntry,
+			AttachmentUrl attachment)
 		throws PortalException {
 
 		if (attachment.getTitle() != null) {
@@ -141,6 +221,112 @@ public class AttachmentUtil {
 			GetterUtil.getString(attachment.getOptions()),
 			GetterUtil.getDouble(attachment.getPriority()), type,
 			attachment.getExternalReferenceCode(), serviceContext);
+	}
+
+	public static CPAttachmentFileEntry upsertCPAttachmentFileEntry(
+			CPAttachmentFileEntryService cpAttachmentFileEntryService,
+			UniqueFileNameProvider uniqueFileNameProvider,
+			AttachmentBase64 attachmentBase64, long classNameId, long classPK,
+			int type, ServiceContext serviceContext)
+		throws Exception {
+
+		Calendar displayCalendar = CalendarFactoryUtil.getCalendar(
+			serviceContext.getTimeZone());
+
+		if (attachmentBase64.getDisplayDate() != null) {
+			displayCalendar = DateConfigUtil.convertDateToCalendar(
+				attachmentBase64.getDisplayDate());
+		}
+
+		DateConfig displayDateConfig = new DateConfig(displayCalendar);
+
+		Calendar expirationCalendar = CalendarFactoryUtil.getCalendar(
+			serviceContext.getTimeZone());
+
+		expirationCalendar.add(Calendar.MONTH, 1);
+
+		if (attachmentBase64.getExpirationDate() != null) {
+			expirationCalendar = DateConfigUtil.convertDateToCalendar(
+				attachmentBase64.getExpirationDate());
+		}
+
+		DateConfig expirationDateConfig = new DateConfig(expirationCalendar);
+
+		long fileEntryId = 0;
+
+		FileEntry fileEntry = addFileEntry(
+			attachmentBase64, serviceContext.getScopeGroupId(),
+			serviceContext.getUserId(), uniqueFileNameProvider);
+
+		if (fileEntry != null) {
+			fileEntryId = fileEntry.getFileEntryId();
+		}
+
+		return cpAttachmentFileEntryService.upsertCPAttachmentFileEntry(
+			classNameId, classPK, fileEntryId, displayDateConfig.getMonth(),
+			displayDateConfig.getDay(), displayDateConfig.getYear(),
+			displayDateConfig.getHour(), displayDateConfig.getMinute(),
+			expirationDateConfig.getMonth(), expirationDateConfig.getDay(),
+			expirationDateConfig.getYear(), expirationDateConfig.getHour(),
+			expirationDateConfig.getMinute(),
+			GetterUtil.get(attachmentBase64.getNeverExpire(), false),
+			getTitleMap(null, attachmentBase64),
+			GetterUtil.getString(attachmentBase64.getOptions()),
+			GetterUtil.getDouble(attachmentBase64.getPriority()), type,
+			attachmentBase64.getExternalReferenceCode(), serviceContext);
+	}
+
+	public static CPAttachmentFileEntry upsertCPAttachmentFileEntry(
+			CPAttachmentFileEntryService cpAttachmentFileEntryService,
+			UniqueFileNameProvider uniqueFileNameProvider,
+			AttachmentUrl attachmentUrl, long classNameId, long classPK,
+			int type, ServiceContext serviceContext)
+		throws Exception {
+
+		Calendar displayCalendar = CalendarFactoryUtil.getCalendar(
+			serviceContext.getTimeZone());
+
+		if (attachmentUrl.getDisplayDate() != null) {
+			displayCalendar = DateConfigUtil.convertDateToCalendar(
+				attachmentUrl.getDisplayDate());
+		}
+
+		DateConfig displayDateConfig = new DateConfig(displayCalendar);
+
+		Calendar expirationCalendar = CalendarFactoryUtil.getCalendar(
+			serviceContext.getTimeZone());
+
+		expirationCalendar.add(Calendar.MONTH, 1);
+
+		if (attachmentUrl.getExpirationDate() != null) {
+			expirationCalendar = DateConfigUtil.convertDateToCalendar(
+				attachmentUrl.getExpirationDate());
+		}
+
+		DateConfig expirationDateConfig = new DateConfig(expirationCalendar);
+
+		long fileEntryId = 0;
+
+		FileEntry fileEntry = addFileEntry(
+			attachmentUrl, serviceContext.getScopeGroupId(),
+			serviceContext.getUserId(), uniqueFileNameProvider);
+
+		if (fileEntry != null) {
+			fileEntryId = fileEntry.getFileEntryId();
+		}
+
+		return cpAttachmentFileEntryService.upsertCPAttachmentFileEntry(
+			classNameId, classPK, fileEntryId, displayDateConfig.getMonth(),
+			displayDateConfig.getDay(), displayDateConfig.getYear(),
+			displayDateConfig.getHour(), displayDateConfig.getMinute(),
+			expirationDateConfig.getMonth(), expirationDateConfig.getDay(),
+			expirationDateConfig.getYear(), expirationDateConfig.getHour(),
+			expirationDateConfig.getMinute(),
+			GetterUtil.get(attachmentUrl.getNeverExpire(), false),
+			getTitleMap(null, attachmentUrl),
+			GetterUtil.getString(attachmentUrl.getOptions()),
+			GetterUtil.getDouble(attachmentUrl.getPriority()), type,
+			attachmentUrl.getExternalReferenceCode(), serviceContext);
 	}
 
 	private static FileEntry _addFileEntry(
